flux/apps/uoc/mediastorage-service.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: mediastorage
  namespace: default
spec:
  template:
    spec:
      nodeSelector:
        longhorn: compatible
      containers:
        - image: ghcr.io/jgnoguer/mediastorage:latest
          resources: {}
          volumeMounts:
              - mountPath: /mnt/data
                name: mydata
                readOnly: false
          env:
            - name: SCYLLADB_IP
              valueFrom:
                configMapKeyRef:
                  name: uoc-animals-services-cm
                  key: scylladb-ip
            - name: SCYLLA_APPUSER
              valueFrom:
                secretKeyRef:
                  name: animals-database-creds
                  key: username
            - name: SCYLLA_APPPWD
              valueFrom:
                secretKeyRef:
                  name: animals-database-creds
                  key: password
            - name: STORAGE_FOLDER
              value: "/mnt/data"
      volumes:
        - name: mydata
          persistentVolumeClaim:
            claimName: noreplicavolume
            readOnly: false
