flux/apps/uoc/sensors-evt.yaml
# Helloworld-go app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snapshotter
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      app: snapshotter
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: snapshotter
          image: ghcr.io/jgnoguer/snapshotter:0.1.0
---
# Service that exposes watermark app.
# This will be the subscriber for the Trigger
apiVersion: v1
kind: Service
metadata:
  name: snapshotter
  namespace: default
spec:
  selector:
    app: snapshotter
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
