flux/apps/uoc/telegram-evt.yaml
# Helloworld-go app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activity-event-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      app: telegramsubs
  template:
    metadata:
      labels: *labels
    spec:
      nodeSelector:
        kubernetes.io/hostname: uoc-bpim4zero-01
      containers:
        - name: telegramsubs
          image: ghcr.io/jgnoguer/telegramsubs:0.1.0    
---
# Service that exposes telegramsubs app.
# This will be the subscriber for the Trigger
apiVersion: v1
kind: Service
metadata:
  name: activity-event-svc
  namespace: default
spec:
  selector:
    app: telegramsubs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
