flux/apps/uoc/watermark-evt.yaml
# Helloworld-go app deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watermark
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels: &labels
      app: watermark
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: watermark
          image: ghcr.io/jgnoguer/watermark:0.1.3
          volumeMounts:
            - mountPath: /tempimage
              name: tempimage
              readOnly: false
      volumes:
      - name: tempimage
        persistentVolumeClaim:
          claimName: image-tmp-data         
---
# Service that exposes watermark app.
# This will be the subscriber for the Trigger
apiVersion: v1
kind: Service
metadata:
  name: watermark
  namespace: default
spec:
  selector:
    app: watermark
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
